# LOOK-Discord-Bot

./: .gitignore  README.md  bot.py  pyproject.toml
cmds/: event.py  main.py  news.py  react.py  task.py
core/: classes.py
