[tool.poetry]
name = "LOOK-Discord-Bot"
version = "0.1.0"
description = "My first discord bot"
authors = ["AA <luke041510@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
