[tool.poetry]
name = "LOOK-Discord-Bot"
version = "0.1.0"
description = "My first discord bot"
authors = ["AA <luke041510@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
beautifulsoup4 = "^4.13.3"
soupsieve = "^2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
